Added Social Stats section

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 				</div>
 			</div> <!--			end traffic-->
 			
-			<!--OTHER CHARTS	-->
+				<!--OTHER CHARTS	-->
 			<div id="otherCharts-wrapper" class="top-gutter bottom-separator">
 				<div id="dailyTraffic-bar">
 					<div class="card-header">
@@ -158,12 +158,47 @@
             	<canvas id="doughnut" width="400" height="200"></canvas>
           		</div> <!-- /Mobile Users -->
 			</div> <!--			end other chart-->
+		
 			
 			<!-- Social Stats -->
-			<div id="social-stats" class="top-gutter">
+			<div id="social-stats" class="top-gutter bottom-separator clearfix">
 				<div class="card-header">
 					<h3 class="sub-head">Social Stats</h3>
 				</div>
+				<div id="twitter">
+            		<div class="social-icon-wrapper">
+              			<img class="social-icon" src="icons/icon-twitter.svg" alt="twitter icon">
+            		</div>
+            		<h4 class="social-type-head">Twitter</h4>
+            		<p class="social-stats-number">10,345</p>
+				</div>
+				<div id="facebook">
+            		<div class="social-icon-wrapper">
+              			<img class="social-icon" src="icons/icon-facebook.svg" alt="facebook icon">
+            		</div>
+            		<h4 class="social-type-head">Facebook</h4>
+            		<p class="social-stats-number">8,739</p>
+				</div>
+				<div id="google">
+            		<div class="social-icon-wrapper">
+              			<img class="social-icon" src="icons/icon-google-plus.svg" alt="google plus icon">
+            		</div>
+            		<h4 class="social-type-head">Google+</h4>
+            		<p class="social-stats-number">2,530</p>
+				</div>
+			</div><!--			end social stats-->
+			
+			<!-- Members - Activity -->
+        	<div id="members-wrapper" class="top-gutter">
+				<div id="new-members">
+					<div class="card-header">
+            			<h3 class="sub-head">New Members</h3>
+          		</div> <!-- end new members -->
+				<div id="recent-activity">
+					<div class="card-header">
+            			<h3 class="sub-head">Recent Activity</h3>
+          		</div> <!-- end recent activity -->
+
 			</div>
 			
 		</main>
