--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 			</div> <!--			end traffic-->
 			
 				<!--OTHER CHARTS	-->
-			<div id="otherCharts-wrapper" class="top-gutter bottom-separator">
+			<div id="otherCharts-wrapper" class="bottom-separator">
 				<div id="dailyTraffic-bar">
 					<div class="card-header">
             			<h3 class="sub-head">Daily Traffic</h3>
@@ -188,17 +188,117 @@
 				</div>
 			</div><!--			end social stats-->
 			
-			<!-- Members - Activity -->
-        	<div id="members-wrapper" class="top-gutter">
+			<!-- Members Section -->
+        	<div id="members-wrapper" class="bottom-separator">
 				<div id="new-members">
 					<div class="card-header">
             			<h3 class="sub-head">New Members</h3>
+					</div>
+					<!--					CONTENT HERE FOR NEW MEMBERS-->
           		</div> <!-- end new members -->
 				<div id="recent-activity">
 					<div class="card-header">
             			<h3 class="sub-head">Recent Activity</h3>
+					</div>
+					<div class="activity-wrapper clearfix">
+				  		<img class="member-image" src="https://randomuser.me/api/portraits/women/75.jpg" alt="member profile picture">
+				  		<p class="member-activity">Victoria Chambers commented on YourApp's SEO Tips</p>
+				  		<p class="activity-time">4 hours ago</p>
+				  		<a href="#" class="arrow">></a> 
+					</div>
+					<div class="activity-wrapper clearfix">
+				  		<img class="member-image" src="https://randomuser.me/api/portraits/men/94.jpg" alt="member profile picture">
+				  		<p class="member-activity">Dale Byrd liked the post Facebook's changes for 2017</p>
+				  		<p class="activity-time">5 hours ago</p>
+				  		<a href="#" class="arrow">></a> 
+					</div> 	
+					<div class="activity-wrapper clearfix">
+				  		<img class="member-image" src="https://randomuser.me/api/portraits/women/20.jpg" alt="member profile picture">
+				  		<p class="member-activity">Dawn Wood commented on Facebook's changes for 2017</p>
+				  		<p class="activity-time">5 hours ago</p>
+				  		<a href="#" class="arrow">></a> 
+					</div>
+					<div class="activity-wrapper clearfix">
+				  		<img class="member-image" src="https://randomuser.me/api/portraits/men/35.jpg" alt="member profile picture">
+				  		<p class="member-activity">Dan Oliver posted YourApp's SEO Tips</p>
+				  		<p class="activity-time">1 day ago</p>
+				  		<a href="#" class="arrow">></a> 
+					</div>
           		</div> <!-- end recent activity -->
-
+			</div><!-- end members section -->
+			
+			<!-- MESSAGE + SETTINGS SECTION -->
+        	<div id="messageSettings-wrapper" class="bottom-separator">
+				<div id="message-user">
+					<div class="card-header">
+						<h3 class="sub-head">Message User</h3>
+					</div>
+					<form id="message-form" role="form">
+						<input id="searchInput" type="text" name="searchinput" aria-label="Search" placeholder="Search for User">
+						<textarea id="message-content" name="messagecontent" rows="6" placeholder="Message for User"></textarea>
+						<button id="sendButton" class="form-button" type="submit" name="send">Send</button>
+              	   </form>
+				</div>
+				<div id="settings">
+					<div class="card-header">
+						<h3 class="sub-head">Settings</h3>
+					</div>
+					<div id="emailNoti-wrapper">
+						<span class="toggle-switch-name">Send Email Notification</span>
+						<label for="toggle-checkbox" class="switch">
+						  <input id="toggle-checkbox" type="checkbox" name="toggle-checkbox" checked>
+						  <span class="slider round"></span>
+						</label>
+					</div>
+					<div id="profilePublic-wrapper">
+						<span class="toggle-switch-name">Set Profile To Public</span>
+						<label for="toggle-checkbox" class="switch">
+						  <input id="toggle-checkbox" type="checkbox" name="toggle-checkbox" checked>
+						  <span class="slider round"></span>
+						</label>
+					</div>
+					
+					<div id="timezone">
+					<select name="timezone-dropdown" id="timezone-dropdown">
+					  <option id="choose" selected hidden disabled>Select Timezone</option>
+					  <option value="-12.0">(GMT -12:00) Eniwetok, Kwajalein</option>
+					  <option value="-11.0">(GMT -11:00) Midway Island, Samoa</option>
+					  <option value="-10.0">(GMT -10:00) Hawaii</option>
+					  <option value="-9.0">(GMT -9:00) Alaska</option>
+					  <option value="-8.0">(GMT -8:00) Pacific Time (US &amp; Canada)</option>
+					  <option value="-7.0">(GMT -7:00) Mountain Time (US &amp; Canada)</option>
+					  <option value="-6.0">(GMT -6:00) Central Time (US &amp; Canada), Mexico City</option>
+					  <option value="-5.0">(GMT -5:00) Eastern Time (US &amp; Canada), Bogota, Lima</option>
+					  <option value="-4.0">(GMT -4:00) Atlantic Time (Canada), Caracas, La Paz</option>
+					  <option value="-3.5">(GMT -3:30) Newfoundland</option>
+					  <option value="-3.0">(GMT -3:00) Brazil, Buenos Aires, Georgetown</option>
+					  <option value="-2.0">(GMT -2:00) Mid-Atlantic</option>
+					  <option value="-1.0">(GMT -1:00 hour) Azores, Cape Verde Islands</option>
+					  <option value="0.0">(GMT) Western Europe Time, London, Lisbon, Casablanca</option>
+					  <option value="1.0">(GMT +1:00 hour) Brussels, Copenhagen, Madrid, Paris</option>
+					  <option value="2.0">(GMT +2:00) Kaliningrad, South Africa</option>
+					  <option value="3.0">(GMT +3:00) Baghdad, Riyadh, Moscow, St. Petersburg</option>
+					  <option value="3.5">(GMT +3:30) Tehran</option>
+					  <option value="4.0">(GMT +4:00) Abu Dhabi, Muscat, Baku, Tbilisi</option>
+					  <option value="4.5">(GMT +4:30) Kabul</option>
+					  <option value="5.0">(GMT +5:00) Ekaterinburg, Islamabad, Karachi, Tashkent</option>
+					  <option value="5.5">(GMT +5:30) Bombay, Calcutta, Madras, New Delhi</option>
+					  <option value="5.75">(GMT +5:45) Kathmandu</option>
+					  <option value="6.0">(GMT +6:00) Almaty, Dhaka, Colombo</option>
+					  <option value="7.0">(GMT +7:00) Bangkok, Hanoi, Jakarta</option>
+					  <option value="8.0">(GMT +8:00) Beijing, Perth, Singapore, Hong Kong</option>
+					  <option value="9.0">(GMT +9:00) Tokyo, Seoul, Osaka, Sapporo, Yakutsk</option>
+					  <option value="9.5">(GMT +9:30) Adelaide, Darwin</option>
+					  <option value="10.0">(GMT +10:00) Eastern Australia, Guam, Vladivostok</option>
+					  <option value="11.0">(GMT +11:00) Magadan, Solomon Islands, New Caledonia</option>
+					  <option value="12.0">(GMT +12:00) Auckland, Wellington, Fiji, Kamchatka</option>
+					</select>
+				  </div><!-- /Timezone-->
+				  <div id="save-cancel-wrapper">
+					<button id="saveButton" type="submit" name="saveButton">Save</button>
+					<button id="cancelButton" type="submit" name="cancelButton">Cancel</button>
+              	  </div>
+				</div>
 			</div>
 			
 		</main>
