--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 					<div class="card-header">
 						<h3 class="sub-head">Message User</h3>
 					</div>
-					<form id="message-form">
+					<form id="message-form" autocomplete="off">
 						<input id="user-searchInput" type="text" name="searchinput" aria-label="Search" placeholder="Search for User" list="current-members">
 						<textarea id="message-content" name="messagecontent" rows="6" placeholder="Message for User"></textarea>
 						<button id="sendButton" class="form-button" type="submit" name="send">Send</button>
